# mevius

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: mevius.rviz
launch/: display.launch  t265.launch
models/: mevius.urdf  mevius.xml  policy.pt  scene.xml
models/meshes/: BL_calf_link.STL  BL_scapula_link.STL  BL_thigh_link.STL  BR_scapula_link.STL  BR_thigh_link.STL  FL_scapula_link.STL  FL_thigh_link.STL  FR_scapula_link.STL  FR_thigh_link.STL
msg/: MeviusLog.msg
scripts/: analytical_ik.py  cpg_utils.py  isaacgym_torch_utils.py  legged_gym_math.py  mevius_main.py  mevius_utils.py  parameters.py  tmotor_lib.py  tmotor_test.py
